--- a/index.html
+++ b/index.html
@@ -10,12 +10,15 @@
 </head>
 
 <body class="d-flex flex-column vh-100">
-    <header include="pages/template/header.html"></header>
-    <main class="bg-light flex-grow-1" include="pages/galery/galery.html"></main>
-    <footer class="footer" include="pages/template/footer.html"></footer>
-    
+    <header include="src/pages/template/header.html"></header>
+    <section include="src/pages/galery/galeryHeader.html"></section>
+    <main class="bg-light flex-grow-1" include="src/pages/galery/galery.html"></main>
+    <footer class="footer" include="src/pages/template/footer.html"></footer>
+
     <script src="app.js"></script>
 </body>
+
+
 
 </html>
 
