add font awesome cdn

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <main class="bg-light flex-grow-1" include="src/pages/galery/galery.html"></main>
     <footer class="footer" include="src/pages/template/footer.html"></footer>
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <script src="includes.js"></script>
     <script src="app.js"></script>
 </body>
